# swarm_collection

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: firefly1_config.yaml  firefly4_config.yaml  inertias.yaml  joint_names_triangular_gripper.yaml
launch/: 4drone.launch  4drone_X.launch  4drone_square.launch  4drone_straight.launch  V.launch  display.launch  extra_square.launch  extra_straight.launch  gazebo.launch  gripper_square_extra.launch  gripper_straight_extra.launch  interzone.launch  mav.launch  straightnew.launch  straightnewnew.launch
meshes/: arm.STL  arm_link.STL  hub.STL
meshes/coke_can/: model-1_2.sdf  model-1_4.sdf  model.config  model.sdf
models/can_coke/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/can_coke/meshes/: can_coke.dae
models/trash_bin/: model.sdf
models/trash_bin/meshes/: model.dae
src/: X.cpp  extra_root_node.cpp  extra_square.cpp  extra_straight.cpp  gripper_control.py  gripper_control_test.py  gripper_square_extra.cpp  gripper_straight_extra.cpp  interzone.cpp  interzone_rootnode.cpp  mav_hover.cpp  root_node.cpp  square.cpp  straight.cpp  straightnew.cpp  straightnewnew.cpp
urdf/: firefly.xacro  gripper.xacro  iris.xacro  just_arm.urdf  triangular_gripper.csv  triangular_gripper.urdf
worlds/: 4x4.world  extra_4x4.world  extra_4x4_square.world  extra_4x4_straight.world  fresh_4x4.world  random2x2.world
